--- a/projects/ITFCodeWA.ClientMudBlazor/ITFCodeWA.ClientMudBlazor.csproj
+++ b/projects/ITFCodeWA.ClientMudBlazor/ITFCodeWA.ClientMudBlazor.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\ITFCodeWA.Models\ITFCodeWA.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\EntityForms\Documents\" />
+  </ItemGroup>
+
 </Project>
