--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,7 @@
 /tests/projects/ITFCodeWA.Services.Tests/obj
 /tests/projects/ITFCodeWA.MapperConfig.Tests/bin/Debug/net6.0
 /tests/projects/ITFCodeWA.MapperConfig.Tests/obj
+/.vs/ItfCodeWebApp-UI/v17/TestStore/0
+/.vs/ItfCodeWebApp-UI/FileContentIndex
+/.vs/ItfCodeWebApp-UI/DesignTimeBuild
+/.vs/ItfCodeWebApp-UI/v17
