--- a/projects/ITFCodeWA.ClientMudBlazor/ITFCodeWA.ClientMudBlazor.csproj
+++ b/projects/ITFCodeWA.ClientMudBlazor/ITFCodeWA.ClientMudBlazor.csproj
@@ -23,13 +23,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\modules\ITFCodeWA.Extensions.DateTimeOffsetExtendors\ITFCodeWA.Extensions.DateTimeOffsetExtendors.csproj" />
     <ProjectReference Include="..\ITFCodeWA.Models\ITFCodeWA.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Components\EntityCards\Documents\" />
     <Folder Include="Components\EntityForms\Documents\" />
-    <Folder Include="Components\EntityGrids\Documents\" />
   </ItemGroup>
 
 </Project>
