--- a/projects/ITFCodeWA.ClientMudBlazor/ITFCodeWA.ClientMudBlazor.csproj
+++ b/projects/ITFCodeWA.ClientMudBlazor/ITFCodeWA.ClientMudBlazor.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="Components\EntityForms\Documents\" />
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
